Fix tag alignment

--- a/statusboard/src/components/Projects/MultiSelect/MultiSelect.scss
+++ b/statusboard/src/components/Projects/MultiSelect/MultiSelect.scss
@@ -1,5 +1,5 @@
 .unselected-tags {
-  margin-left: -300px;
+  margin-left: 200px;
 }
   .selected-tag-name {
     margin-right: 1rem;
