--- a/statusboard/src/pages/Projects/Projects.scss
+++ b/statusboard/src/pages/Projects/Projects.scss
@@ -81,14 +81,23 @@
   border-width: 2px
 }
 
-#nontagFilter label {
-  display: inline-block;
-  width: 280px;
+.filter-title-panel {
+    vertical-align: middle;
+    padding-top: 5px;
+    font-weight: bold;
+}
+
+.filter-panel {
+  padding-left: 32px;
+
+  label {
+  display: inline-flex;
+  width: 210px;
   vertical-align: middle;
   position: relative;
   text-align: relative;
 }
-
+}
 .divBottomSeparator {
   border-bottom: blue 3px solid;
 }
